--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+server.port=8082
+spring.datasource.url = jdbc:mysql://localhost:3306/e-boutique?serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password =
+spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
